--- a/PowerApp/Src/ListaOKRs.fx.yaml
+++ b/PowerApp/Src/ListaOKRs.fx.yaml
@@ -703,7 +703,13 @@
             HoverColor: =Color.White
             HoverFill: |-
                 =ColorValue("#0099cc")
-            OnSelect: =Set(pouplista_2,true)
+            OnSelect: |-
+                =Set(pouplista_2,true);
+                If(
+                    Self.Text = "aprobar",
+                    Set(displayModeVar,DisplayMode.Edit),
+                    Set(displayModeVar,DisplayMode.View)
+                )
             PaddingBottom: =2
             PaddingLeft: =2
             PaddingRight: =2
@@ -1492,7 +1498,7 @@
                 BorderStyle: =BorderStyle.Solid
                 DataField: ="lineaBase"
                 Default: =ThisItem.lineaBase
-                DisplayMode: =DisplayMode.View
+                DisplayMode: =displayModeVar
                 DisplayName: =DataSourceInfo([@T_OKR_APP_GCI_003],DataSourceInfo.DisplayName,lineaBase)
                 Fill: =RGBA(0, 0, 0, 0)
                 Height: =70
@@ -1506,7 +1512,7 @@
 
                 DataCardKey28_1 As Texto:
                     DisplayMode: =DisplayMode.Edit
-                    FontColor: =RGBA(214, 221, 224, 1)
+                    FontColor: =RGBA(255, 255, 255, 1)
                     Height: =22
                     Size: =16
                     Text: =Parent.DisplayName
@@ -1519,9 +1525,9 @@
 
                 "DataCardValue24_1 As 'Entrada de texto'":
                     AccessibleLabel: =Parent.DisplayName
-                    BasePaletteColor: =
+                    BasePaletteColor: =RGBA(8, 222, 8, 1)
                     DisplayMode: =Parent.DisplayMode
-                    Fill: =
+                    Fill: =RGBA(255, 255, 255, 1)
                     Height: =32
                     Mode: ='TextInputCanvas.Mode'.SingleLine
                     Required: =Parent.Required
@@ -1559,7 +1565,7 @@
                 BorderStyle: =BorderStyle.Solid
                 DataField: ="unidadDeMedida"
                 Default: =ThisItem.unidadDeMedida
-                DisplayMode: =DisplayMode.View
+                DisplayMode: =displayModeVar
                 DisplayName: =DataSourceInfo([@T_OKR_APP_GCI_003],DataSourceInfo.DisplayName,unidadDeMedida)
                 Fill: =RGBA(0, 0, 0, 0)
                 Height: =70
@@ -1572,7 +1578,7 @@
 
                 DataCardKey14_1 As Texto:
                     DisplayMode: =DisplayMode.Edit
-                    FontColor: =RGBA(214, 221, 224, 1)
+                    FontColor: =RGBA(255, 255, 255, 1)
                     Height: =22
                     Size: =16
                     Text: =Parent.DisplayName
@@ -1585,10 +1591,10 @@
 
                 "DataCardValue15_1 As 'Cuadro combinado'.pcfdataset":
                     AccessibleLabel: =Parent.DisplayName
-                    BasePaletteColor: =RGBA(141, 229, 250, 1)
+                    BasePaletteColor: =RGBA(8, 222, 8, 1)
                     DefaultSelectedItems: =[Parent.Default]
                     DisplayMode: =Parent.DisplayMode
-                    Fill: =
+                    Fill: =RGBA(255, 255, 255, 1)
                     Height: =32
                     Items: =Choices([@T_OKR_APP_GCI_003].unidadDeMedida)
                     Required: =Parent.Required
@@ -1627,7 +1633,7 @@
                 BorderStyle: =BorderStyle.Solid
                 DataField: ="metaPeriodo"
                 Default: =ThisItem.metaPeriodo
-                DisplayMode: =DisplayMode.View
+                DisplayMode: =displayModeVar
                 DisplayName: =DataSourceInfo([@T_OKR_APP_GCI_003],DataSourceInfo.DisplayName,metaPeriodo)
                 Fill: =RGBA(0, 0, 0, 0)
                 Height: =70
@@ -1640,7 +1646,7 @@
 
                 DataCardKey25_1 As Texto:
                     DisplayMode: =DisplayMode.Edit
-                    FontColor: =RGBA(214, 221, 224, 1)
+                    FontColor: =RGBA(255, 255, 255, 1)
                     Height: =22
                     Size: =16
                     Text: =Parent.DisplayName
@@ -1653,7 +1659,9 @@
 
                 "DataCardValue21_1 As 'Entrada de texto'":
                     AccessibleLabel: =Parent.DisplayName
+                    BasePaletteColor: =RGBA(8, 222, 8, 1)
                     DisplayMode: =Parent.DisplayMode
+                    Fill: =RGBA(255, 255, 255, 1)
                     Height: =32
                     Required: =Parent.Required
                     ValidationState: =If(IsBlank(Parent.Error), "None", "Error")
@@ -1755,9 +1763,9 @@
             FontColor: =RGBA(255, 255, 255, 1)
             Height: =32
             Size: =20
-            Text: ="Editar información - " & Gallery2.Selected.codigoKR
+            Text: ="Completar información - " & Gallery2.Selected.codigoKR
             Weight: ='TextCanvas.Weight'.Bold
-            Width: =322
+            Width: =400
             X: =247
             Y: =103
             ZIndex: =4
@@ -1771,8 +1779,12 @@
             Height: =44
             Icon: =Icon.Save
             OnSelect: |-
-                =SubmitForm(Form1_1);
-                Set(pouplista_2,false)
+                =If(
+                    !IsBlank(DataCardValue21_1.Value) && !IsBlank(DataCardValue22_1.Value) && !IsBlank(DataCardValue15_1.Selected.Value) && !IsBlank(DataCardValue24_1.Value),
+                    SubmitForm(Form1);
+                    Set(pouplista_2,false),
+                    Notify("Por favor, completa todos los campos.", NotificationType.Error)
+                );
             PaddingBottom: =5
             PaddingLeft: =5
             PaddingRight: =5
